--- a/css/style.css
+++ b/css/style.css
@@ -259,11 +259,31 @@ h3 {
 @media screen and (min-width: 950px) {
   #section-news #container-section-news #item-section-news-left h1 {
     margin-top: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
   }
 }
 #section-news #container-section-news #item-section-news-left p {
   text-align: center;
+}
+@media screen and (min-width: 950px) {
+  #section-news #container-section-news #item-section-news-left p {
+    margin-bottom: 50px;
+  }
+}
+#section-news #container-section-news #item-section-news-left #btn-join-reader {
+  display: block;
+  margin: 0 auto;
+  width: 250px;
+  padding: 12px;
+  background-color: #ff5e38;
+  color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  transition: background-color 0.3s ease;
+  margin-bottom: 50px;
+}
+#section-news #container-section-news #item-section-news-left #btn-join-reader:hover {
+  background-color: #b53928;
 }
 @media screen and (min-width: 950px) {
   #section-news #container-section-news #item-section-news-left {
@@ -818,11 +838,16 @@ h3 {
   transform: translate(-50%, -50%);
 }
 #section-location #container-info-location {
+  max-width: 1200px;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  align-items: center;
   height: 200px;
-  margin-top: 540px;
+  margin-top: 500px;
+  border-radius: 0 0 50px 50px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 #section-location #container-info-location ul li {
   margin: 10px 0;
@@ -915,6 +940,9 @@ h3 {
 }
 #footer #container-footer-top #item-footer-left ul li a {
   color: #fff;
+}
+#footer #container-footer-top #item-footer-left ul li a:hover {
+  color: #b53928;
 }
 @media screen and (min-width: 950px) {
   #footer #container-footer-top #item-footer-left ul li a {
