--- a/css/style.scss
+++ b/css/style.scss
@@ -269,14 +269,36 @@ h3 {
     #item-section-news-left {
       h1 {
         white-space: nowrap;
+
         @media screen and (min-width: 950px) {
           margin-top: 50px;
-          margin-bottom: 100px;
+          margin-bottom: 50px;
         }
       }
 
       p {
         text-align: center;
+
+        @media screen and (min-width: 950px) {
+          margin-bottom: 50px;
+        }
+      }
+
+      #btn-join-reader {
+        display: block;
+        margin: 0 auto;
+        width: 250px;
+        padding: 12px;
+        background-color: $btn-red;
+        color: $white;
+        border-radius: 10px;
+        text-align: center;
+        transition: background-color 0.3s ease;
+        margin-bottom: 50px;
+
+        &:hover {
+          background-color: $btn-red-hover;
+        }
       }
 
       @media screen and (min-width: 950px) {
@@ -951,11 +973,16 @@ h3 {
   }
 
   #container-info-location {
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    align-items: center;
     height: 200px;
-    margin-top: 540px;
+    margin-top: 500px;
+    border-radius: 0 0 50px 50px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
     ul {
       li {
@@ -1030,8 +1057,9 @@ h3 {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+
         @media screen and (min-width: 950px) {
-          margin-top: -20px ;
+          margin-top: -20px;
         }
 
         #list-left {
@@ -1057,6 +1085,10 @@ h3 {
           a {
             color: $white;
 
+            &:hover {
+              color: $btn-red-hover;
+            }
+
             @media screen and (min-width: 950px) {
               margin-right: 20px;
             }
@@ -1072,6 +1104,7 @@ h3 {
 
       p {
         color: $white;
+
         @media screen and (min-width: 950px) {
           text-align: start;
         }
@@ -1139,14 +1172,16 @@ h3 {
       flex-wrap: wrap;
       justify-content: space-between;
     }
+
     ul {
       display: flex;
       justify-content: center;
 
       li {
         margin: 20px 10px;
+
         @media screen and (min-width: 950px) {
-          margin: 20px ;
+          margin: 20px;
         }
 
         a {
@@ -1158,6 +1193,7 @@ h3 {
     p {
       text-align: center;
       color: #D0D5DD;
+
       @media screen and (min-width: 950px) {
         margin: 20px;
       }
