--- a/css/style-blog.css
+++ b/css/style-blog.css
@@ -20,6 +20,7 @@ section#section-article {
   padding-top: 60px;
 }
 section#section-article h1 {
+  margin-top: 300px;
   text-align: center;
   font-weight: 400;
   font-size: 100px;
@@ -30,12 +31,36 @@ section#section-article h1 {
 section#section-article img {
   width: 350px;
   height: auto;
+  float: right;
+}
+section#section-article h2 {
+  position: relative;
+  text-align: center;
+}
+section#section-article h3 {
+  margin: 30px;
+  width: 80%;
+  height: 100px;
+  line-height: 100px;
+  background-color: #21BCB4;
+  border-radius: 10px;
+  text-align: center;
+}
+section#section-article h4 {
+  margin-top: 250px;
+  text-align: center;
+  font-weight: 400;
+  font-size: 100px;
+  line-height: 60px;
+  letter-spacing: -0.02em;
+  color: #1B9690;
 }
 section#section-article div#containerpub {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 20px 0;
 }
 section#section-article div#containerpub p {
   font-weight: bold;
@@ -43,4 +68,27 @@ section#section-article div#containerpub p {
   line-height: 30px;
   letter-spacing: -0.02em;
   color: #E94A34;
+}
+section#section-article div#descriptif {
+  padding: 50px 0;
+}
+section#section-article div#descriptif img.cotillons {
+  float: left;
+  margin-bottom: 50px;
+}
+section#section-article div#descriptif img.floral {
+  margin-left: 100px;
+  width: 80%;
+  height: 100px;
+  position: absolute;
+  display: flex;
+}
+section#section-article div#descriptif ul {
+  clear: both;
+  color: #FF5E38;
+  text-align: center;
+}
+section#section-article hr {
+  clear: both;
+  margin-bottom: 50px;
 }/*# sourceMappingURL=style-blog.css.map */
