--- a/css/style-blog.scss
+++ b/css/style-blog.scss
@@ -21,7 +21,9 @@ body {
 section#section-article {
     padding-top: 60px;
 
+    //h1 titre journée portes ...//
     h1 {
+        margin-top: 300px;
         text-align: center;
         font-weight: 400;
         font-size: 100px;
@@ -30,24 +32,53 @@ section#section-article {
         color: #1B9690;
     }
 
+    //ballons//
     img {
         width: 350px;
         height: auto;
+        float: right;
     }
 
+    //texte bibliotheque biblook SDB//
     h2 {
-        
+
+        position: relative;
+        text-align: center;
+
+
     }
 
+    //texte mercredi 21 juin//
     h3 {
-        
+        margin: 30px;
+        width: 80%;
+        height: 100px;
+        line-height: 100px;
+        background-color: #21BCB4;
+        border-radius: 10px;
+        text-align: center;
+
+
+    }
+    //venez troquer des boutures//
+    h4 {
+        margin-top: 250px;
+        text-align: center;
+        font-weight: 400;
+        font-size: 100px;
+        line-height: 60px;
+        letter-spacing: -0.02em;
+        color: #1B9690;
+
     }
 
+    //entree gratuite et ouvert à tous//
     div#containerpub {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        margin: 20px 0;
 
         p {
             font-weight: bold;
@@ -56,8 +87,56 @@ section#section-article {
             letter-spacing: -0.02em;
             color: #E94A34;
         }
-        
+
 
 
     }
+
+    //cotillons//
+    div#descriptif {
+        padding: 50px 0;
+
+        img.cotillons {
+            float: left;
+            margin-bottom: 50px;
+        }
+        //surement pas au bon endroit//
+        img.floral {
+            margin-left: 100px;
+            width: 80%;
+            height: 100px;
+            position:absolute;
+            display:flex;
+
+            
+         
+            
+            
+           
+        }
+
+        //visite guidée//
+        ul {
+            clear: both;
+            color: #FF5E38;
+            text-align: center;
+        }
+
+    }
+
+    hr {
+        clear: both;
+        margin-bottom: 50px;
+    }
+
+
+
+
+
+
+
+
+
+
+
 }
