--- a/css/style-book-detail.css
+++ b/css/style-book-detail.css
@@ -1,3 +1,73 @@
+main .bloc-modale {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 900;
+  display: none;
+}
+main #box-delete {
+  z-index: 999;
+  width: 500px;
+  height: 250px;
+  background-color: #f1f1f1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 20px;
+  padding: 20px 20px 0 20px;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+main #box-delete p {
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 45px;
+}
+main #box-delete p:last-of-type {
+  text-transform: uppercase;
+  font-size: 1.1rem;
+}
+main #box-delete .article-name-box {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+main #box-delete div {
+  display: flex;
+  justify-content: flex-end;
+  margin: 40px 0 auto;
+}
+main #box-delete div #btn-cancel {
+  border: 1px solid red;
+  color: red;
+  padding: 10px;
+  border-radius: 10px;
+}
+main #box-delete div #btn-cancel:hover {
+  background-color: red;
+  color: #fff;
+  cursor: pointer;
+}
+main #box-delete div #btn-confirmed {
+  border: 1px solid green;
+  color: green;
+  padding: 10px;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+main #box-delete div #btn-confirmed:hover {
+  background-color: green;
+  color: #fff;
+  cursor: pointer;
+}
+main .active-box-delete {
+  display: block;
+}
 main section#section-detail-book {
   padding-top: 60px;
   padding-bottom: 80px;
