--- a/css/style-book-detail.scss
+++ b/css/style-book-detail.scss
@@ -6,6 +6,87 @@ $black: #070606;
 $footer: #043a61;
 
 main {
+  .bloc-modale {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.75);
+    z-index: 900;
+    display: none;
+  }
+
+  #box-delete {
+    z-index: 999;
+    width: 500px;
+    height: 250px;
+    background-color: #f1f1f1;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 20px;
+    padding: 20px 20px 0 20px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+      rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+
+    p {
+      font-size: 1.1rem;
+      font-weight: bold;
+      text-align: center;
+      margin-top: 20px;
+      margin-bottom: 45px;
+
+      &:last-of-type {
+        text-transform: uppercase;
+        font-size: 1.1rem;
+      }
+    }
+
+    .article-name-box {
+      display: block;
+      text-align: center;
+      width: 100%;
+    }
+
+    div {
+      display: flex;
+      justify-content: flex-end;
+      margin: 40px 0 auto;
+
+      #btn-cancel {
+        border: 1px solid red;
+        color: red;
+        padding: 10px;
+        border-radius: 10px;
+
+        &:hover {
+          background-color: red;
+          color: #fff;
+          cursor: pointer;
+        }
+      }
+
+      #btn-confirmed {
+        border: 1px solid green;
+        color: green;
+        padding: 10px;
+        border-radius: 10px;
+        margin-left: 10px;
+
+        &:hover {
+          background-color: green;
+          color: #fff;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+  .active-box-delete {
+    display: block;
+  }
   section#section-detail-book {
     padding-top: 60px;
     padding-bottom: 80px;
